src/objects/ADvendio__AdServer_ID_Relation__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__AdServer_Login__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is for background use by the ad server interface of DART.</description>
        <inlineHelpText>This field is for background use by the ad server interface of DART.</inlineHelpText>
        <label>AdServer Login</label>
        <referenceTo>ADvendio__AdServer_Logins__c</referenceTo>
        <relationshipLabel>AdServer ID Relations</relationshipLabel>
        <relationshipName>DART_ID_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Destination_ID__c</fullName>
        <description>This field is for background use by the ad server interface of DART.</description>
        <inlineHelpText>This field is for background use by the ad server interface of DART.</inlineHelpText>
        <label>Destination ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Relation_Name__c</fullName>
        <description>This field is for background use by the ad server interface of DART.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field is for background use by the ad server interface of DART.</inlineHelpText>
        <label>Relation Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Relation_Type__c</fullName>
        <description>This field is for background use by the ad server interface of DART.</description>
        <inlineHelpText>This field is for background use by the ad server interface of DART.</inlineHelpText>
        <label>Relation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Content Category -&gt; Site</fullName>
                </value>
                <value>
                    <fullName>Zone -&gt; Site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Source_ID__c</fullName>
        <description>This field is for background use by the ad server interface of DART.</description>
        <inlineHelpText>This field is for background use by the ad server interface of DART.</inlineHelpText>
        <label>Source ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>AdServer ID Relation</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ADvendio__Relation_Name__c</columns>
        <columns>ADvendio__Relation_Type__c</columns>
        <columns>ADvendio__Source_ID__c</columns>
        <columns>ADvendio__Destination_ID__c</columns>
        <columns>ADvendio__AdServer_Login__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AIR-{0}</displayFormat>
        <label>AdServer ID Relation No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AdServer ID Relations</pluralLabel>
    <recordTypes>
        <fullName>ADvendio__ADITION</fullName>
        <active>true</active>
        <description>This record type should be used to store IDs of AdServer ADITION</description>
        <label>ADITION</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__ADTECH</fullName>
        <active>true</active>
        <description>This record type should be used to store IDs of AdServer ADTECH</description>
        <label>ADTECH</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__DART</fullName>
        <active>true</active>
        <description>This record type should be used to store IDs of AdServer DART</description>
        <label>DART</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__DFP</fullName>
        <active>true</active>
        <description>This record type should be used to store IDs of AdServer DFP</description>
        <label>DFP</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__NUGGAD</fullName>
        <active>true</active>
        <description>This record type should be used to store IDs of AdServer NUGGAD</description>
        <label>NUGGAD</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__SMART</fullName>
        <active>true</active>
        <description>This record type should be used to store IDs of AdServer SMART</description>
        <label>SMART</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__YIELDLAB</fullName>
        <active>true</active>
        <description>This record type should be used to store IDs of AdServer YIELDLAB</description>
        <label>YIELDLAB</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>